@@ -4,7 +4,7 @@
 #readelf: -x 6 -r
 #ld: -shared -melf32btsmip
 
-Relocation section '.rel.dyn' at offset 0x314 contains 2 entries:
+Relocation section '.rel.dyn' at offset 0x31c contains 2 entries:
  Offset     Info    Type            Sym.Value  Sym. Name
 00000000  00000000 R_MIPS_NONE      
 00000340  00000003 R_MIPS_REL32     
